[gd_scene load_steps=2 format=3 uid="uid://cnid0nr71q8nk"]

[ext_resource type="Script" uid="uid://l6y15n4rox30" path="res://scripts/ui/components/skill_button.gd" id="1_n405t"]

[node name="SkillButton" type="PanelContainer"]
script = ExtResource("1_n405t")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Skill Name"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "0/5"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="VBox"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Skill description goes here."
horizontal_alignment = 1
autowrap_mode = 2

[node name="LearnButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Learn"

[node name="RequirementsLabel" type="RichTextLabel" parent="VBox"]
visible = false
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
fit_content = true
scroll_active = false
